cmake_minimum_required(VERSION 3.10)
project(READWRITEFILESWASM CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "-s WASM=1 -s EXPORT_ALL=1 -s LINKABLE=1 -s EXTRA_EXPORTED_RUNTIME_METHODS=\"['cwrap','addOnPreMain']\" -s DISABLE_EXCEPTION_CATCHING=0")
set(CMAKE_EXE_LINKER_FLAGS "-s EXPORT_ALL=1 -s LINKABLE=1 -s EXTRA_EXPORTED_RUNTIME_METHODS=\"['cwrap','addOnPreMain']\"  -s DEMANGLE_SUPPORT=1")

add_subdirectory(cpp)
